Update article titles and excerpts for clarity; enhance styles for underlined text; add new slogans to Home component reflecting project themes.

--- a/src/content/deliverables-are-delusions.mdx
+++ b/src/content/deliverables-are-delusions.mdx
@@ -1,13 +1,20 @@
-
 ---
-title: "Deliverables Are Delusions"
-date: 2025-07-02
+title: "The Scope Delusion"
+date: 2025-09-10
 tag: culture
-excerpt: "Outcomes over outputs: a field manual for wrecking your status reports (and loving it)."
+excerpt: "When scope is locked from the start, incremental delivery becomes theater. Here's why honesty matters."
+---
+> Flexible scope is a lie. **Stop pretending.**
+> Scope is fixed.  
+> Agility is proclaimed.  
+> Delivery is incremental.  
+> Reality is constrained.  
 ---
 
-Outputs are souvenirs. **Outcomes** are the trip.
+The illusion of agility thrives when the entire project scope is locked in from day one, often by commitments made to investors or stakeholders. This false incrementalism masquerades as flexibility but is, in truth, a rigid performance. Teams march forward, delivering in increments that feel incremental only on the surface. The deeper reality is that the path is predetermined, leaving little room for genuine adaptation or learning.
 
-1. Delete the roadmap. Keep the compass.
-2. Swap quarterly plans for **quarterly questions**.
-3. Replace demos with *debriefs*.
+Investor pressure plays a decisive role in this dynamic. Promises made during funding rounds create an invisible cage around the product roadmap. The scope becomes a contract, not a hypothesis. Agile rhetoric is wielded as a shield to appease stakeholders, while the true constraints remain unspoken. This disconnect fosters a theater of delivery, where progress is demonstrated through staged increments rather than meaningful evolution.
+
+The mismatch between the rhetoric of agility and the reality of locked scope has profound consequences. Teams are caught in a bind, expected to embody flexibility while constrained by immovable goals. Psychological safety erodes as the space for experimentation shrinks. Learning is sacrificed at the altar of delivery, and innovation becomes a casualty of obligation. The incremental steps become checkpoints on a fixed path, rather than opportunities to pivot or improve.
+
+Breaking free from the scope delusion requires honesty and courage. Teams and leaders must acknowledge the real constraints they face instead of hiding behind agile buzzwords. Only by exposing the limits of commitments can organizations create space for true dialogue and adaptation. Embracing this transparency is not a failure—it is the foundation for rebuilding trust, fostering learning, and reclaiming the spirit of agility.
