--- a/src/content/the-day-standups-stood-still.mdx
+++ b/src/content/the-day-standups-stood-still.mdx
@@ -8,7 +8,7 @@ excerpt: "Daily rituals became theater. Here's how to reclaim intent without the
 > Teams meet. 
 > Attention leaks. 
 > We patch the leak with ceremony. **It doesn't hold.**
-> Replace status with *signals*. Collaborative creation replaces tickets. It feels dangerous; **that's the point.**
+> Replace status with **signals**. Collaborative creation replaces tickets. It feels dangerous; **that's the point.**
 
 
 
