--- a/src/content/the-day-standups-stood-still.mdx
+++ b/src/content/the-day-standups-stood-still.mdx
@@ -2,13 +2,13 @@
 title: "The Day Stand‑ups Stood Still"
 date: 2025-08-19
 tag: process
-excerpt: "Daily rituals became theater. Here's how to reclaim intent without the script."
+excerpt: "Daily rituals became theater. Here’s how to reclaim intent without the script."
 ---
 
 > Teams meet. 
 > Attention leaks. 
-> We patch the leak with ceremony. **It doesn't hold.**
-> Replace status with **signals**. Collaborative creation replaces tickets. It feels dangerous; **that's the point.**
+> We patch the leak with ceremony. **It doesn’t hold.**
+> Replace status with **signals**. Collaborative creation replaces tickets. It feels dangerous; **that’s the point.**
 
 
 
